<resources>
    <string name="app_name">NotWordle</string>
    <string name="title">Wort-Hol</string>
    <string name="title_desc">The totally-not clone of another game</string>
    <string name="submit">SUBMIT</string>
    <string name="restart">RESTART</string>
    <string name="clear">CLEAR</string>
    <string name="emptyspace"> </string>
    <string name="add_a_word">ADD A WORD</string>
    <string name="enter_word_hint">Enter word</string>
    <string name="add_word">ADD WORD</string>
    <string name="back_to_game">Back to Game</string>
    <string name="alphabet">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="alphabetCaps">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="you_win">YOU WIN!</string>
    <string name="play_again">Play Again</string>
</resources>