<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWordActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/enter_word_ET"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/current_et"
        android:textSize="40sp"
        android:autofillHints="word"
        android:hint="@string/enter_word_hint"
        android:textAlignment="center"
        android:layout_marginTop="250dp"
        android:inputType="text"
        />

    <Button
        android:id="@+id/add_word_ADACT_BT"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/add_word"
        />

    <Button
        android:id="@+id/back_BT"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/back_to_game"
        />


</LinearLayout>