<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:id="@+id/title_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/title_desc_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_desc"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:textSize="15sp"
        android:layout_gravity="center"
        />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:columnCount="5"
        android:rowCount="6"
        android:useDefaultMargins="true"
        android:layout_gravity="center"
        >

        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/current_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/current_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/current_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/current_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/current_et"
            />

        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />
        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:maxLength="1"
            android:inputType="textCapCharacters"
            android:textStyle="bold"
            android:textSize="40sp"
            android:autofillHints="name"
            android:hint="@string/emptyspace"
            android:background="@drawable/not_yet_et"
            />


    </GridLayout>

    <Button
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        />
    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/restart"
        />
    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/clear"
        />

    </LinearLayout>
</ScrollView>